# strip_exif

./: .gitignore  LICENSE.md  README.md
src/: CMakeLists.txt  strip_exif.cpp
